# ai2web-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ai2web/: __init__.py  ap2.py  export.py  manifest.py  negotiator.py  nlweb.py  safety.py  schema.py  server.py  validator.py
tests/: run.py
