[project]
name = "ai2web"
version = "0.1.0"
description = "AI2Web (ai2w) Python SDK - capability model, manifest builder, validator, negotiation, server handler."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AI2Web Foundation" }]
keywords = ["ai2web", "ai2w", "ai", "agents", "mcp", "protocol"]
dependencies = []

[project.urls]
Homepage = "https://ai2web.dev"
Repository = "https://github.com/ai2web-foundation/ai2web-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai2web"]
